@@ -15,6 +15,11 @@ Version 4.3.2  [ under development ]
               tetrahedra, due to new tests for high-genus vertex links.
             - Also made census generation more efficient by pruning on
               high-degree edges (as well as the usual low-degree edges).
+        Class NPerm:
+            - Micro-optimised routines that are called extremely frequently,
+              such as sign().
+    TEST SUITE:
+        - Added tests for the NPerm class.
 
 Version 4.3.1  [ 5 May, 2006 ]
 
